--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "nodemon api-server/index"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.25.2",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "next": "^9.1.4",
     "null-loader": "^3.0.0",
     "react": "^16.12.0",
