--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "server": "nodemon api-server/index"
   },
   "dependencies": {
